--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,13 @@
 <resources>
     <string name="app_name">My Application real</string>
-    <string name="edit_message">enter a message</string>
+    <string name="edit_message">Send a Message</string>
     <string name="button_send">Send</string>
+    <string name="title_activity_display_message">DisplayMessageActivity</string>
+    <string name="title_activity_show_grid">ShowGridActivity</string>
+    <string name="title_activity_loss">LossActivity</string>
+    <string name="title">Project COLOR</string>
+    <string name="new_game">New Game</string>
+    <string name="help">Help</string>
+    <string name="help_text">The game is simple. Clear in rows and/or columns of 3 identical colors.</string>
+    <string name="title_activity_help">Help</string>
 </resources>
